<resources>
    <string name="app_name">Github Viewer</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_rename">Modifier</string>
    <string name="action_search">Search Repository</string>
    <string name="action_logout">Log Out</string>
    <string name="error_request">Votre requête n\'a pas pu aboutir</string>

    <!-- sharedPreference file key -->
    <string name="preference_file_key">brice.testgithub.file</string>
    completions."

    <!-- keys intent parameters values -->
    <string name="search_value">search_value</string>
    <string name="repo_name">delete_repo</string>

    <string name="title_frag_depot">Mon dépôt</string>
    <string name="title_frag_create">Créer un repo</string>

    <string name="login_button">Connexion</string>
    <string name="login_explanation">Vous devez vous identifier via le site Github pour donner l\'autorisation à cette application d\'accéder à vos données afin de les afficher.</string>

    <string name="item_confidentiality_text">Privé : </string>

    <!-- AlertDeleteDialog -->
    <string name="get_id">Nous avons besoin de votre login pour confirmer la suppression</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="error">Une erreur s\'est produite lors de la suppression du repertoire </string>

    <!-- create repo fragment -->
    <string name="optional">Optionnel</string>
    <string name="compulsory">Obligatoire</string>
    <string name="name">Nom : </string>
    <string name="description">Description : </string>
    <string name="homepage">Page Web : </string>
    <string name="create">Ajouter à mon dépôt</string>
    <string name="miss_name">Un répertoire doit au moins avoir un nom</string>
    <string name="creation_successful">Le répertoire a été créé</string>
    <string name="creation_unsuccessful">"Un problème a eu lieu</string>

    <!-- search Activity -->
    <string name="nb_repos">Résultat : </string>
    <string name="title_activity_dialog_edit">DialogEditActivity</string>

    <!-- AlertDialogEdit -->
    <string name="edit_button">Modifer le répertoire</string>
    <string name="login">Login : </string>
</resources>
