<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Thomas Brice
  ~ Copyright (c) 2017.
  -->

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_margin"
    android:layout_gravity="center"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_margin"
            android:layout_gravity="center"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/name"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/editText_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/compulsory"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/homepage"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/editText_homepage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/optional"
                        android:inputType="textUri"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/description"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/editText_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/optional"
                        android:inputType="textMultiLine"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/login"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/login_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/compulsory"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/create_btn"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cardview_margin"
            android:layout_gravity="center"
            android:elevation="@dimen/cardview_default_elevation"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="editClicked"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardCornerRadius="@dimen/cardview_default_radius">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_button"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_margin="@dimen/text_margin" />

        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v7.widget.CardView>