<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Thomas Brice
  ~ Copyright (c) 2017.
  -->

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cardview_margin"
    android:layout_gravity="center"
    android:elevation="@dimen/cardview_default_elevation"
    app:cardBackgroundColor="@color/cardview_dark_background"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="37dp"
            android:text="@string/get_id"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:layout_margin="@dimen/text_margin"/>

        <EditText
            android:id="@+id/login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:onClick="cancelClicked"
                android:layout_margin="@dimen/text_margin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:onClick="deleteClicked"
                android:layout_margin="@dimen/text_margin"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>