<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Thomas Brice
  ~ Copyright (c) 2017.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/github_logo_icon" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="@dimen/cardview_default_elevation"
        android:onClick="logInClicked"
        android:layout_margin="@dimen/cardview_margin"
        android:clickable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/cardview_default_radius">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/login_button"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryText"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="@dimen/cardview_default_elevation"
        android:layout_margin="@dimen/cardview_margin"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="@dimen/cardview_default_radius">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/login_explanation"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"/>
    </android.support.v7.widget.CardView>

</LinearLayout>